# Rust

./: LICENSE  README.md
ruser/: Cargo.toml
ruser-mech/: keyboard.py  mods.rs
ruser-mech/data/: app.db  post.txt
ruser-mech/src/: db.rs  main.rs
ruser-mech/src/models/: keyboard.rs  mod.rs  people.rs
ruser-mech/src/routes/: keyboard.rs  mod.rs  people.rs
ruser/data/: app.db
ruser/src/: main.rs
sharpe/: Cargo.toml
sharpe/src/: main.hard  main.rs
