[package]
name = "people_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ✅ Correct SQLx config for SQLite on Axum/Tokio
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros"] }

uuid = { version = "1", features = ["serde", "v4"] }
validator = { version = "0.18", features = ["derive"] }
anyhow = "1"

